Tue Jan 24 2006  Johan Euphrosine <johan@mekensleep.org>

	* pokerui/pokerrenderer.py: added wrap_text function instead of DummyWriter

Tue Jan 03 2006  Benoit Treins

	* pokernetwork/pokerserver.py: store the skin information in poker table
	
	* pokernetwork/pokerpackets.py(PACKET_POKER_TABLE): add the skin info

Tue Jan 03 2006  Loic Dachary  <loic@gnu.org>

	* Release 1.0.14

	* pokernetwork/pokerclient.py: store the timeout information
	
	* pokernetwork/pokerpackets.py(PACKET_POKER_TIMEOUT_WARNING): add the reference time
	
	* pokerclient2d/pokerdisplay2d.py (PokerDisplay2D.updateAction): remove shadowstack handling
	  since pokerrenderer now uses call/raise interactors

Mon Jan 02 2006  Loic Dachary  <loic@gnu.org>

	* pokernetwork/pokerserver.py (PokerService.spawnTourney): provide search path
	  to PokerTournament for it to find the payout structure.

Wed Dec 28 2005  Loic Dachary  <loic@gnu.org>

	* pokernetwork/protocol.py (UGAMEProtocol._handleVersion): _protocol_ok flag to handle
	  premature deconnexion while protocol is being negotiated

Tue Dec 06 2005  Johan Euphrosine  <johan@mekensleep.org>
Tue Dec 06 2005  Cedric Pinson  <cpinson@freesheep.org>

	* pokerclient2d/chat.c: added chat history handling
	* pokerui/pokerrenderer.py: added chat history handling


Tue Dec 06 2005  Johan Euphrosine  <johan@mekensleep.org>
Tue Dec 06 2005  Cedric Pinson  <cpinson@freesheep.org>

	* pokernetwork/pokerpackets.py: added PacketPokerInterfaceCommand for sending hide/show-window command to display3d

	* pokerui/pokerrenderer.py: added render(PacketPokerInterfaceCommand) for forwarding hide/show-window command to display3d

	* pokerclient2d/: show and hide window only if (screen != NULL) (i.e in 2D)

Wed Nov 23 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.13

	* pokernetwork/pokerserver.py: kill obsolete tournament balancing functions

	* pokernetwork/__init__.py (protocol_number): protocol changes because the
	  server refers to new betting structures.
